new blog + link fixes

--- a/404.html
+++ b/404.html
@@ -84,7 +84,9 @@
         '/blogs/introduction-into-ursina-mobile',
         '/blogs/making-a-chatbot-with-python-mobile',
         '/blogs/python-introduction-mobile',
-        '/blogs/machine-learning-with-python-mobile'
+        '/blogs/machine-learning-with-python-mobile',
+        '/blogs/using-sockets-for-networking',
+        '/blogs/using-sockets-for-networking-2'
       ];
     
       const uppercasePaths = [
@@ -108,7 +110,9 @@
         '/Blogs/Introduction-Into-Ursina-Mobile',
         '/Blogs/Making-A-Chatbot-With-Python-Mobile',
         '/Blogs/Python-Introduction-Mobile',
-        '/Blogs/Machine-Learning-With-Python-Mobile'
+        '/Blogs/Machine-Learning-With-Python-Mobile',
+        '/Blogs/Using-Sockets-For-Networking',
+        '/Blogs/Using-Sockets-For-Networking-2'
       ];
     
       const currentPage = window.location.pathname.toLowerCase();
