--- a/Blogs/Python-Fundamentals-Mobile.html
+++ b/Blogs/Python-Fundamentals-Mobile.html
@@ -131,7 +131,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home">Home</a></div>
+		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
     <div class="menu-item"><a href="../Authors/Rangerrhino23">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
@@ -178,7 +178,7 @@
 <p>
   Before diving into Python programming, you need to have Python installed on your machine. Visit the official Python website (python.org) 
   and download the latest version compatible with your operating system. The installation process is straightforward, and Python provides 
-  clear instructions for each platform. For a more in depth step by step guide, click <a href="Installing-Python">here</a>.
+  clear instructions for each platform. For a more in depth step by step guide, click <a href="Installing-Python-Mobile">here</a>.
 </p>
 
 <h2>Python Syntax</h2>
@@ -283,30 +283,30 @@ else: #If "i" doens't equal 5, it runs code indented below
   Functions are blocks of reusable code that perform specific tasks. In Python, you can define functions using the "<i>def</i>" keyword. 
   Functions can accept arguments and return values. Here's a basic function example:
 </p>
-<br><br><pre><code id="code-block-1" style="color: white;">def greet(name):
+<br><br><pre><code id="code-block-6" style="color: white;">def greet(name):
 print("Hello, " + name + "!")
 
 greet("John")  
-</code><div class="copy-button" onclick="copyCode('code-block-1')"></div></pre><br><br>
+</code><div class="copy-button" onclick="copyCode('code-block-6')"></div></pre><br><br>
 
 <h2>Input and Output</h2>
 <p>
   Python provides simple ways to interact with the user and display information. You can use the "<i>input()</i>" function to get user input and the "<i>print()</i>" function to display output. Here's an example:
 </p>
-<br><br><pre><code id="code-block-2" style="color: white;">name = input("Enter your name: ")
+<br><br><pre><code id="code-block-7" style="color: white;">name = input("Enter your name: ")
 print("Hello, " + name + "!")
-</code><div class="copy-button" onclick="copyCode('code-block-2')"></div></pre><br><br>
+</code><div class="copy-button" onclick="copyCode('code-block-7')"></div></pre><br><br>
 
 <h2>Error Handling</h2>
 <p>
   Errors are a common part of programming. Python provides a mechanism to handle errors using try-except blocks. By catching and handling exceptions, you can gracefully handle errors in your code.
   Here's an example of a try-except block in Python:
 </p>
-<br><br><pre><code id="code-block-6" style="color: white;">try:
+<br><br><pre><code id="code-block-8" style="color: white;">try:
 x = 10 / 0  # This line will cause a ZeroDivisionError
 except ZeroDivisionError:
 print("Error: Division by zero!")
-</code><div class="copy-button" onclick="copyCode('code-block-6')"></div></pre><br><br>
+</code><div class="copy-button" onclick="copyCode('code-block-8')"></div></pre><br><br>
 <p>
   In the above code, we have a try block where we attempt to divide 10 by 0, which is an invalid operation and will raise a ZeroDivisionError. 
   The except block is used to catch the specific exception raised (in this case, ZeroDivisionError) and handle it gracefully.
@@ -322,7 +322,7 @@ print("Error: Division by zero!")
 <div style="margin-top:80px;"></div>
 <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
 <div style="margin-top:40px;"></div>
-<a class="button" href="../Home">Back To Home</a>
+<a class="button" href="../Home-Mobile">Back To Home</a>
 <div style="margin-top:40px;"></div>
   <script>
   function copyCode(elementId) {
