--- a/Blogs/Creating-Simulations-With-Python-Mobile.html
+++ b/Blogs/Creating-Simulations-With-Python-Mobile.html
@@ -131,7 +131,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home">Home</a></div>
+		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
     <div class="menu-item"><a href="../Authors/RangerRhino23">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
@@ -177,7 +177,7 @@
 <h2>Setting Up Project Folder</h2>
 <p>
   The first thing when creating any Python project is creating a project folder. In this blog I am assuming you have already installed Python and have a decent
-  knowledge about Python. If you don't click <a href="Installing-Python">here</a> for a Python Installation guide and <a href="Python-Introduction.html">here</a> 
+  knowledge about Python. If you don't click <a href="Installing-Python-Mobile">here</a> for a Python Installation guide and <a href="Python-Introduction-Mobile">here</a> 
   for a Python Introduction. To create a project folder, navigate to the place you store all of your project files. Create a new folder and name it what ever you
   want. I would recommend naming it "Simulations" or something close to that. After you create your project folder, open that folder in your desired editor or IDE.
 </p>
@@ -386,7 +386,7 @@ beginSim()
 <div style="margin-top:80px;"></div>
 <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
 <div style="margin-top:40px;"></div>
-<a class="button" href="../Home">Back To Home</a>
+<a class="button" href="../Home-Mobile">Back To Home</a>
 <div style="margin-top:40px;"></div>
   <script>
   function copyCode(elementId) {
