--- a/Home.html
+++ b/Home.html
@@ -173,10 +173,10 @@
         Making a website With flask
       </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-        <img src="sad.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/Using-Sockets-For-Networking'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Sockets.jpg" class="blog-img">
         <p><b>
-          Blog doesn't exist yet
+          Using sockets for networking
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
