--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -108,6 +108,8 @@
       window.location.href = '#fun-blogs';
 		});
 	</script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
   <script>
 		var HelpfulBlogsToggle = document.getElementById("helpful-blogs-button");
 		var sideMenu = document.getElementById("side-menu");
