we do monitzation

--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -90,7 +90,8 @@
   </ul>
   </header>
   <body>
-    <br><br>
+    <br><br><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     <!--Optional image placement-->
     <img src="Flask-stuff/Flask.png" style="zoom:0.6;" class="img-preset">
     <h1>Creating web applications with python flask.</h1><br>
