--- a/Blogs/Creating-Simulations-With-Python-Mobile.html
+++ b/Blogs/Creating-Simulations-With-Python-Mobile.html
@@ -161,7 +161,8 @@
       window.location.replace("https://pyblog.ddns.net/Blogs/Creating-Simulations-With-Python")
     }
   
-  </script>
+  </script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
 <br><br>
 <img src="home-page-images/Creating-Simulations.png" style="width: 60%;">
 <h1>Creating Simulations With Python</h1>
