--- a/Blogs/Deeper-Exploration-of-Tkinter-Mobile.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter-Mobile.html
@@ -147,6 +147,8 @@
   <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></a>
   </header>
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
   <script>
     function isMobileDevice() {
       const userAgent = navigator.userAgent.toLowerCase();
