--- a/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
+++ b/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
@@ -140,7 +140,8 @@
     }
   
   </script>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
   <!-- MAIN STUFF-->
   <br><br>
   <img src="home-page-images/Desktop-Tkinter.jpg" class="img-preset" style="zoom:0.75;">
