--- a/Blogs/Introduction-Into-Ursina-Mobile.html
+++ b/Blogs/Introduction-Into-Ursina-Mobile.html
@@ -140,6 +140,8 @@
     }
   
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
   <br><br>
   <h1>Introduction into Ursina!</h1>
   <h3>Difficulty: Beginner</h3>
