--- a/Blogs/Python-Fundamentals-Mobile.html
+++ b/Blogs/Python-Fundamentals-Mobile.html
@@ -162,6 +162,8 @@
     }
   
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
 <br><br>
 <img src="home-page-images/Python-Fundamentals.png" style="width: 70%;">
 <h1>Creating Simulations With Python</h1>
