--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -90,6 +90,8 @@
   </ul>
   </header>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     <br><br>
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.png" class="img-preset">-->
