--- a/Blogs/Using-Sockets-For-Networking-2.html
+++ b/Blogs/Using-Sockets-For-Networking-2.html
@@ -137,7 +137,8 @@ if __name__ == '__main__':
     chat_client.start()
     
             </code>                             <div class="copy-button" onclick="copyCode('code-block-1')"></div></pre>
-
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+            crossorigin="anonymous"></script>
     <script>
   function copyCode(elementId) {
     var codeBlock = document.getElementById(elementId);
