--- a/Blogs/Installing-Python-Mobile.html
+++ b/Blogs/Installing-Python-Mobile.html
@@ -140,7 +140,8 @@
     }
   
   </script>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
   <!-- MAIN STUFF-->
   <br><br>
     <img src="Python-Introduction-Files\python_logo.png" class="img-preset">
