--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -90,6 +90,8 @@
   </ul>
   </header>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
     <script>
       function isMobileDevice() {
         const userAgent = navigator.userAgent.toLowerCase();
