--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -109,6 +109,8 @@
   </ul>
   </header>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
     <br><br>
     <img src="home-page-images/Machine-Learning.png" style="width: 30%;">
     <h1>Machine Learning With Python</h1>
