--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -113,6 +113,8 @@
   </ul>
   </header>
   <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
     <br><br>
     <h1 class="paragraph">Chatbots: How to make them in python</h1>
     <h3>Difficulty: Intermediate</h3>
