--- a/Blogs/New-Blog-2.html
+++ b/Blogs/New-Blog-2.html
@@ -7,6 +7,8 @@
     <title>Test</title>
 </head>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     This is a blog that hasnt been created yet...<br>
     please return to the <a href="../Home">homepage.</a>
 </body>
