we fix position

--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -3,7 +3,8 @@
   <head>
     <title>Creating a web application with flask | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.png"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     <style>
       .img-preset {
         width: auto;
@@ -90,8 +91,7 @@
   </ul>
   </header>
   <body>
-    <br><br><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-    crossorigin="anonymous"></script>
+    <br><br>
     <!--Optional image placement-->
     <img src="Flask-stuff/Flask.png" style="zoom:0.6;" class="img-preset">
     <h1>Creating web applications with python flask.</h1><br>
