--- a/Blogs/Creating-Simulations-With-Python-Mobile.html
+++ b/Blogs/Creating-Simulations-With-Python-Mobile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creating Simulations With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon.png">
+    <link rel="icon" type="image/x-icon" href="../icon.png"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
     <style>
 
       .img-preset {
@@ -161,8 +162,7 @@
       window.location.replace("https://pyblog.ddns.net/Blogs/Creating-Simulations-With-Python")
     }
   
-  </script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-  crossorigin="anonymous"></script>
+  </script>
 <br><br>
 <img src="home-page-images/Creating-Simulations.png" style="width: 60%;">
 <h1>Creating Simulations With Python</h1>
