--- a/Blogs/Deeper-Exploration-of-Tkinter-Mobile.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter-Mobile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deeper Exploration of Tkinter | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon.png">
+    <link rel="icon" type="image/x-icon" href="../icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
     <style>
 
       .img-preset {
@@ -147,8 +148,7 @@
   <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></a>
   </header>
 <body>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-     crossorigin="anonymous"></script>
+
   <script>
     function isMobileDevice() {
       const userAgent = navigator.userAgent.toLowerCase();
