--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -3,7 +3,8 @@
   <head>
     <title>Machine Learning With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../icon_rounded.png">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+     crossorigin="anonymous"></script>
     <style>
       .img-preset {
         width: 250px;
@@ -109,8 +110,7 @@
   </ul>
   </header>
   <body>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-     crossorigin="anonymous"></script>
+
     <br><br>
     <img src="home-page-images/Machine-Learning.png" style="width: 30%;">
     <h1>Machine Learning With Python</h1>
