--- a/Blogs/Python-Fundamentals-Mobile.html
+++ b/Blogs/Python-Fundamentals-Mobile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Fundamentals | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon.png">
+    <link rel="icon" type="image/x-icon" href="../icon.png">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     <style>
 
       .img-preset {
@@ -162,8 +163,6 @@
     }
   
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-  crossorigin="anonymous"></script>
 <br><br>
 <img src="home-page-images/Python-Fundamentals.png" style="width: 70%;">
 <h1>Creating Simulations With Python</h1>
