--- a/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
+++ b/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktop Applications With Tkinter | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon.png">
+    <link rel="icon" type="image/x-icon" href="../icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+  crossorigin="anonymous"></script>
     <style>
 
       .img-preset {
@@ -140,8 +141,7 @@
     }
   
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-  crossorigin="anonymous"></script>
+
   <!-- MAIN STUFF-->
   <br><br>
   <img src="home-page-images/Desktop-Tkinter.jpg" class="img-preset" style="zoom:0.75;">
