--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -109,12 +109,11 @@
   <header>
     <ul class="menu">
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-      <li><a href="../Home" class="hover-underline-animation">Home</a></li>
+      <li><a href="../Home" class="hover-underline-animation">Home</a></li>    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+      crossorigin="anonymous"></script>
   </ul>
   </header>
   <body>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-     crossorigin="anonymous"></script>
     <br><br>
     <h1 class="paragraph">Chatbots: How to make them in python</h1>
     <h3>Difficulty: Intermediate</h3>
