--- a/Blogs/Python-Introduction-Mobile.html
+++ b/Blogs/Python-Introduction-Mobile.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Introduction | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon.png">
+    <link rel="icon" type="image/x-icon" href="../icon.png">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
     <style>
 
       body {
@@ -77,8 +78,6 @@
     }
   
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-  crossorigin="anonymous"></script>
   <!-- MAIN STUFF-->
   <br><br>
     <img src="Python-Introduction-Files/python_logo.png" class="img-preset">
