--- a/Blogs/Using-Sockets-For-Networking-2.html
+++ b/Blogs/Using-Sockets-For-Networking-2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under development</title>
+    <title>Under development</title><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
@@ -137,8 +138,6 @@ if __name__ == '__main__':
     chat_client.start()
     
             </code>                             <div class="copy-button" onclick="copyCode('code-block-1')"></div></pre>
-            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-            crossorigin="anonymous"></script>
     <script>
   function copyCode(elementId) {
     var codeBlock = document.getElementById(elementId);
