--- a/Blogs/How-To-Use-VSCode-Mobile.html
+++ b/Blogs/How-To-Use-VSCode-Mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Installing Python | PyBlog</title>
+    <title>How To Use VS Code | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="../icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
   crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 
       .img-preset {
         width: 340px;
-        height: 100px;
+        height: auto;
         border-radius: 5px;
         object-fit: cover;
       }
@@ -137,76 +137,66 @@
     if (isMobileDevice()) {
       ;
     } else {
-      window.location.replace("https://pyblog.ddns.net/Blogs/Installing-Python")
+      //window.location.replace("https://pyblog.ddns.net/Blogs/Installing-Python")
     }
   
   </script>
+<br><br>
+<img src="home-page-images/VS-Code.png" class="img-preset">
+<h1>How To Use VS Code</h1>
+<h3>Difficulty: Beginner</h3>
 
-  <!-- MAIN STUFF-->
-  <br><br>
-    <img src="Python-Introduction-Files\python_logo.png" class="img-preset">
-    <h1>Installing Python</h1>
-    <h3>Difficulty: Beginner</h3>
+<h2>Introduction</h2>
+<p>
+  Visual Studio Code (VS Code) is a powerful and versatile code editor developed by Microsoft. 
+  It has gained immense popularity among developers due to its lightweight nature, extensive 
+  feature set, and wide range of extensions. Whether you're a seasoned programmer or just 
+  starting your coding journey, this guide will help you unlock the full potential of 
+  Visual Studio Code.
+</p>
 
-    <h2>Introduction</h2>
-    <p>
-      Python is a popular programming language that is used for a variety of tasks including 
-      web development, data analysis, and artificial intelligence. If you're interested in 
-      learning Python or using it for a project, you'll need to download and install it on your computer. 
-      In this blog post, we'll walk you through the steps for downloading and installing Python on Windows, macOS, and Linux.
-    </p>
-    
-    <h2>Step 1: Download Python</h2>
-    <p>
-      To download Python, go to the official Python website at <a class="link" href="https://www.python.org/downloads/">https://www.python.org/downloads/</a>. You'll see two different versions 
-      of Python available for download: Python 2 and Python 3. Python 2 is an older version of the language that is still used by some 
-      legacy applications, but it is no longer actively developed. For most purposes, you'll want to download Python 3. <br><br>
-      Once you're on the downloads page, scroll down until you see the section labeled "Python Releases for Windows/macOS/Linux." Click on the link for the version of Python you 
-      want to download. For example, if you want to download Python 3.10.0, click on the link that says "Download Python 3.10.0."
-    </p>
+<h2>Installation and Setup</h2>
+<p>
+  The first step is to download and install Visual Studio Code from the <a href="https://code.visualstudio.com">official website</a>. 
+  Once installed, launch the application, and you're ready to go. Take a moment to familiarize yourself with the user interface, 
+  including the sidebar, the main editor area, and the integrated terminal.
+</p>
 
-    <h2>Step 2: Install Python</h2>
-    <h3>Windows</h3>
-    <p>
-      If you're using Windows, double-click on the downloaded file to begin the installation process. The installer will guide you through the steps for installing Python 
-      on your computer. Make sure to select the option to add Python to your system path, which will make it easier to run Python from the command line.
-    </p>
+<h2>Customizing the Environment</h2>
+<p>
+  Visual Studio Code offers a high level of customization to suit your workflow preferences. You can access the settings by clicking 
+  on the gear icon in the sidebar or by using the keyboard shortcut "Ctrl + ,". Explore the various options available, such as 
+  changing the theme, modifying font settings, and configuring keybindings. Customize your setup to make it visually appealing and efficient.
+</p>
 
-    <h3>MacOS</h3>
-    <p>
-      If you're using macOS, double-click on the downloaded file to begin the installation process. Follow the prompts to install Python on your computer. By default, 
-      macOS comes with a version of Python pre-installed, but it may not be the latest version. Installing a newer version of Python will not replace the system Python, 
-      but it will be available for you to use in your own projects.
-    </p>
+<h2>Working with Files and Folders</h2>
+<p>
+  VS Code provides a convenient way to navigate and manage files and folders within your project. Use the sidebar to browse your directory 
+  structure, open files, and create new ones. Take advantage of the "Explorer" view's context menu to perform actions like renaming, 
+  deleting, and duplicating files. Additionally, you can drag and drop files from your file system directly into the editor area.
+</p>
 
-    <h3>Linux</h3>
-    <p>
-      If you're using Linux, you can install Python using your distribution's package manager. For example, on Ubuntu or Debian, you can run the following command in the terminal:
-    </p>
-    <br><pre id="code-block-1"><code  style="color: white;">sudo apt-get install python3
-    </code><div class="copy-button" onclick="copyCode('code-block-1')"></div></pre>
+<h2>Editing Features</h2>
+<p>
+  The heart of Visual Studio Code lies in its powerful editing capabilities. Utilize features such as syntax highlighting, auto-completion, 
+  and code formatting to enhance your coding experience. VS Code supports a wide range of programming languages out of the box and provides 
+  language-specific features for each. Experiment with different extensions to extend its capabilities even further.
+</p>
 
-    <h2>Step 3: Verify Your installation</h2>
-    <p>
-      Once you've installed Python, you can verify that it's working by opening a command prompt (Windows) or terminal (macOS/Linux) and running the following command:
-    </p>
-      <br><pre id="code-block-2"><code  style="color: white;">python --version
-      </code><div class="copy-button" onclick="copyCode('code-block-2')"></div></pre><br><bR>
-    <p>
-      This should print out the version of Python that you just installed. If you see an error message, make sure that you followed the installation instructions correctly and try again.
-    </p>
+<h2>Conclusion</h2>
+<p>
+  Visual Studio Code is a versatile code editor that empowers developers to write code efficiently and effectively. 
+  By following the tips and techniques outlined in this guide, you'll be able to harness the full potential of this powerful tool. 
+  Experiment, customize, and explore the vast ecosystem of extensions to create a coding environment that suits your needs. 
+  <br>Happy coding!
+</p>
 
-    <h2>Conclusion</h2>
-    <p>
-      Downloading and installing Python is a relatively simple process, and it's the first step to using Python for your own projects. Once you have Python installed, you can start 
-      learning the language, experimenting with code, and building your own applications.
-    </p>
 
-    <br><br>
-    <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
-    <br><br><br>
-    <a class="button" href="../Home-Mobile">Back To Home</a>
-    <div style="margin-top: 40px;"></div>
+<br><br>
+<p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
+<br><br><br>
+<a class="button" href="../Home">Back To Home</a>
+<div style="margin-top:30px;"></div>
   <script>
   function copyCode(elementId) {
     var codeBlock = document.getElementById(elementId);
