--- a/Home.html
+++ b/Home.html
@@ -206,8 +206,15 @@
           Installing Python
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/VS-Code.png" class="blog-img">
+        <p><b>
+          Installing and Using VS Code
+        </b></p>
+      </div>
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+    
+    <div style="margin-top:400px;"></div>
 
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
