--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -247,6 +247,12 @@
           Installing Python
         </b></p>
       </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/VS-Code.png" class="blog-img">
+        <p><b>
+          Installing and Using VS Code
+        </b></p>
+      </div>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
