another fix lol

--- a/Blogs/How-To-Use-VSCode-Mobile.html
+++ b/Blogs/How-To-Use-VSCode-Mobile.html
@@ -137,7 +137,7 @@
     if (isMobileDevice()) {
       ;
     } else {
-      //window.location.replace("https://pyblog.ddns.net/Blogs/Installing-Python")
+      window.location.replace("https://pyblog.ddns.net/Blogs/How-To-Use-VSCode")
     }
   
   </script>
