idk just trying something

--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,8 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.png">
+    <meta name="Homepage" content="The homepage of pyblog, where awesome blogs can be found!">
+
     <style>
       .img-preset {
         width: 350px;
