--- a/Home.html
+++ b/Home.html
@@ -6,8 +6,11 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <meta name="Homepage" content="The homepage of pyblog, where awesome blogs can be found!">
-
+    <meta property="og:title" content="Homepage">
+    <meta property="og:description" content="Only the best blogs can be found here">
+    <meta property="og:image" content="icon.png">
+    <meta property="og:image:alt" content="icon">
+    
     <style>
       .img-preset {
         width: 350px;
