--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
     crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <meta property="og:title" content="Homepage">
+    <meta property="og:title" content="Homepage of pyblog">
     <meta property="og:description" content="Only the best blogs can be found here">
     <meta property="og:image" content="icon.png">
     <meta property="og:image:alt" content="icon">
