--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="icon.png">
     <meta property="og:title" content="Homepage">
     <meta property="og:description" content="Only the best blogs can be found here">
-    <meta property="og:image" content="icon.png">
+    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
     <meta property="og:image:alt" content="icon">
     
     <style>
