--- a/Home.html
+++ b/Home.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/x-icon" href="icon.png">
     <meta property="og:title" content="Homepage of pyblog">
     <meta property="og:description" content="Only the best blogs can be found here">
-    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
-    <meta property="og:image:alt" content="icon">
+    <meta property="og:image" content="https://www.youtube.com/img/desktop/yt_1200.png">
     
     <style>
       .img-preset {
