new blog & stuff

--- a/404.html
+++ b/404.html
@@ -86,7 +86,8 @@
         '/blogs/python-introduction-mobile',
         '/blogs/machine-learning-with-python-mobile',
         '/blogs/using-sockets-for-networking',
-        '/blogs/using-sockets-for-networking-2'
+        '/blogs/using-sockets-for-networking-2',
+        '/blogs/the-history-of-python'
       ];
     
       const uppercasePaths = [
@@ -112,7 +113,8 @@
         '/Blogs/Python-Introduction-Mobile',
         '/Blogs/Machine-Learning-With-Python-Mobile',
         '/Blogs/Using-Sockets-For-Networking',
-        '/Blogs/Using-Sockets-For-Networking-2'
+        '/Blogs/Using-Sockets-For-Networking-2',
+        '/Blogs/The-History-Of-Python'
       ];
     
       const currentPage = window.location.pathname.toLowerCase();
