--- a/Home.html
+++ b/Home.html
@@ -183,10 +183,10 @@
           Using sockets for networking
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-        <img src="sad.png" class="blog-img">
+      <div class="grid-item" onclick="window.location.href='Blogs/The-History-Of-Python'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/time.jpg" class="blog-img">
         <p><b>
-          Blog doesn't exist yet
+          The history of python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
