some more things

--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Template | PyBlog</title>
+    <title>The History of python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <meta property="og:title" content="The history of python">
+    <meta property="og:description" content="The entire history of python and what it is">
+    <meta property="og:image" content="https://pyblog.ddns.net/Blogs/home-page-images/time.jpg">
     <style>
       .img-preset {
         width: auto;
