--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -4,6 +4,9 @@
     <title>Template | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="../icon_rounded.png">
+    <meta property="og:title" content="A pyblog blog">
+    <meta property="og:description" content="Only the best blogs can be found here">
+    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
     <style>
       .img-preset {
         width: auto;
