added search feature to Desktop Version

--- a/Home.html
+++ b/Home.html
@@ -84,6 +84,12 @@
       <li><a href="#fun-blogs" class="hover-underline-animation">Fun Blogs</a></li>
       <li><a href="#helpful-Blogs" class="hover-underline-animation">Helpful Blogs</a></li>
       <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
+      <li>
+        <form action="search.html" method="GET" class="search-bar">
+          <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." value="" required>
+          <button type="submit">Search</button>
+        </form>
+      </li>
   </ul>
   </header>
 
