--- a/Blogs/Python-Fundamentals.html
+++ b/Blogs/Python-Fundamentals.html
@@ -108,6 +108,12 @@
     <ul class="menu">
       <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
+      <li>
+        <form action="../search.html" method="GET" class="search-bar">
+          <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." value="" required>
+          <button type="submit">Search</button>
+        </form>
+      </li>
   </ul>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
   crossorigin="anonymous"></script>
