--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -217,10 +217,10 @@
         The history of python
       </b></p>
     </div>
-    <div class="grid-item" onclick="window.location.href='Blogs/New-Blog-2'" style="cursor: pointer;">
-      <img src="sad.png" class="blog-img">
+    <div class="grid-item" onclick="window.location.href='Blogs/Terminal-Games-With-Python-Mobile'" style="cursor: pointer;">
+      <img src="Blogs/home-page-images/Terminal-Games.png" class="blog-img">
       <p><b>
-        Blog doesn't exist yet
+        Terminal Games With Python
       </b></p>
     </div>
   </div><br>
