--- a/Blogs/Terminal-Games-With-Python-Mobile.html
+++ b/Blogs/Terminal-Games-With-Python-Mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How To Use VS Code | PyBlog</title>
+    <title>Terminal Games With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
     <link rel="icon" type="image/x-icon" href="../icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
   crossorigin="anonymous"></script>
