--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -125,7 +125,7 @@
 		});
 	</script>
   <!--<p style="display: inline; justify-self: center;">PyBlog</p>-->
-  <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="icon.png"></a>
+  <a href=""><img alt="PyBlog" style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="icon.png"></a>
   <div id="search-menu">
 		<div class="search-item">
       <form action="search-mobile.html" method="GET">
@@ -258,13 +258,13 @@
     <br>
     <!-- Helpful Blogs-->
     <div class="grid-container">
-      <div class="grid-item" onclick="window.location.href='Blogs/Installing-Python'" style="cursor: pointer;">
+      <div class="grid-item" onclick="window.location.href='Blogs/Installing-Python-Mobile'" style="cursor: pointer;">
         <img src="Blogs/Python-Introduction-Files/python_logo.png">
         <p><b>
           Installing Python
         </b></p>
       </div>
-      <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode'" style="cursor: pointer;">
+      <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode-Mobile'" style="cursor: pointer;">
         <img src="Blogs/home-page-images/VS-Code.png" class="blog-img">
         <p><b>
           Installing and Using VS Code
