--- a/Home.html
+++ b/Home.html
@@ -222,6 +222,7 @@
       </b></p>
       </div> 
     </div><br>
+    <p id="tableNumber">1/3</p><br>
     <button onclick="toggleElementsBack()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&lt;</button>
     <button onclick="toggleElements()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&gt;</button>
 
@@ -282,42 +283,51 @@
         var gridContainer = document.getElementById('gridContainer1');
         var gridContainer2 = document.getElementById('gridContainer2');
         var gridContainer3 = document.getElementById('gridContainer3');
+        var textElement = document.getElementById("tableNumber");
   if (grid1 === "true") {
    gridContainer.style.display = 'none';
    gridContainer2.style.display = 'grid';
-   grid2 = "true"
-   grid1 = "false"
+   grid2 = "true";
+   grid1 = "false";
+   textElement.textContent = "2/3";
   } else if (grid2 === "true") {
    gridContainer2.style.display = 'none';
    gridContainer3.style.display = 'grid';
-   grid2 = "false"
-   grid3 = "true"
+   grid2 = "false";
+   grid3 = "true";
+   textElement.textContent = "3/3";
   } else if (grid3 === "true") {
     gridContainer.style.display = 'grid';
     gridContainer3.style.display = 'none';
-    grid3 = "false"
-    grid1 = "true"
+    grid3 = "false";
+    grid1 = "true";
+    textElement.textContent = "1/3";
   }
 }
 function toggleElementsBack() {
   var gridContainer = document.getElementById('gridContainer1');
   var gridContainer2 = document.getElementById('gridContainer2');
   var gridContainer3 = document.getElementById('gridContainer3');
+  var textElement = document.getElementById("tableNumber");
+
   if (grid1 === "true") {
    gridContainer.style.display = 'none';
    gridContainer3.style.display = 'grid';
-   grid3 = "true"
-   grid1 = "false"
-  }else if (grid2 === "true") {
-    gridContainer2.style.display = 'none';
-    gridContainer.style.display = 'grid';
-    grid1 = "true"
-    grid2 = "false"
+   grid3 = "true";
+   grid1 = "false";
+   textElement.textContent = "3/3";
   }else if (grid3 === "true") {
     gridContainer3.style.display = 'none';
     gridContainer2.style.display = 'grid';
-    grid3 = "false"
-    grid2 = "true"
+    grid3 = "false";
+    grid2 = "true";
+    textElement.textContent = "2/3";
+  }else if (grid2 === "true") {
+    gridContainer2.style.display = 'none';
+    gridContainer.style.display = 'grid';
+    grid1 = "true";
+    grid2 = "false";
+    textElement.textContent = "1/3";
   }
 }
   </script>
